Finally got the authentication to work